# Copyright (C) 2006-2010 Lehigh University, Ted Ralphs, Yan Xu, and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id: Makefile.am 507 2006-06-03 03:20:16Z andreasw $

# Author:  Yan Xu Lehigh

AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for Alps                               #
########################################################################

noinst_PROGRAMS = unitTest

nodist_unitTest_SOURCES = \
	AbcBranchActual.cpp AbcBranchActual.h \
	AbcBranchBase.cpp AbcBranchBase.h \
	AbcCutGenerator.cpp AbcCutGenerator.h \
	AbcHeuristic.cpp AbcHeuristic.h \
	AbcMain.cpp \
	AbcMessage.cpp AbcMessage.h \
	AbcModel.cpp AbcModel.h \
	AbcNodeDesc.h \
	AbcParams.cpp AbcParams.h \
	AbcSolution.cpp AbcSolution.h \
	AbcTreeNode.cpp AbcTreeNode.h


# List libraries that need to be linked in
unitTest_LDADD        = ../src/libAlps.la $(CLP_LIBS) $(ALPSLIB_LIBS)
unitTest_DEPENDENCIES = ../src/libAlps.la $(CLP_DEPENDENCIES) $(ALPSLIB_DEPENDENCIES)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = -I`$(CYGPATH_W) $(srcdir)/../src` \
        $(CLP_CFLAGS) \
        $(ALPSLIB_CFLAGS)

# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/inc

test: unitTest$(EXEEXT)
	./unitTest$(EXEEXT) -param ../examples/Abc/abc.par

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = flugpl.log flugpl.mps
