#=============================================================================#
# This file is part of the Abstract Library for Parallel Search (ALPS).       #
#                                                                             #
# ALPS is distributed under the Eclipse Public License as part of the         #
# COIN-OR repository (http://www.coin-or.org).                                #
#                                                                             #
# Authors:                                                                    #
#                                                                             #
#          Yan Xu, Lehigh University                                          #
#          Aykut Bulut, Lehigh University                                     #
#          Ted Ralphs, Lehigh University                                      #
#                                                                             #
# Conceptual Design:                                                          #
#                                                                             #
#          Yan Xu, Lehigh University                                          #
#          Ted Ralphs, Lehigh University                                      #
#          Laszlo Ladanyi, IBM T.J. Watson Research Center                    #
#          Matthew Saltzman, Clemson University                               #
#                                                                             #
#                                                                             #
# Copyright (C) 2001-2019, Lehigh University, Yan Xu, Aykut Bulut, and        #
#                          Ted Ralphs.                                        #
# All Rights Reserved.                                                        #
#=============================================================================#


## $Id: Makefile.am 507 2006-06-03 03:20:16Z andreasw $

# Author:  Yan Xu Lehigh

AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for Alps                               #
########################################################################

noinst_PROGRAMS = unitTest

nodist_unitTest_SOURCES = \
	AbcBranchActual.cpp AbcBranchActual.h \
	AbcBranchBase.cpp AbcBranchBase.h \
	AbcCutGenerator.cpp AbcCutGenerator.h \
	AbcHeuristic.cpp AbcHeuristic.h \
	AbcMain.cpp \
	AbcMessage.cpp AbcMessage.h \
	AbcModel.cpp AbcModel.h \
	AbcNodeDesc.h \
	AbcParams.cpp AbcParams.h \
	AbcSolution.cpp AbcSolution.h \
	AbcTreeNode.cpp AbcTreeNode.h


# List libraries that need to be linked in
unitTest_LDADD        = ../src/libAlps.la $(CGL_LIBS) $(CLP_LIBS) $(OSI_LIBS) \
                        $(ALPSLIB_LIBS)
unitTest_DEPENDENCIES = ../src/libAlps.la \
                        $(CGL_DEPENDENCIES) \
                        $(CLP_DEPENDENCIES) \
                        $(OSI_DEPENDENCIES) \
                        $(ALPSLIB_DEPENDENCIES)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = -I`$(CYGPATH_W) $(srcdir)/../src` \
	$(CLP_CFLAGS) \
	$(ALPSLIB_CFLAGS) -DCOIN_HAS_CLP

# This line is necessary to allow VPATH compilation
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/src

if COIN_HAS_MPI
UNIT_TEST_CMD=$MPICXX -n 2 ./unitTest$(EXEEXT) -param ../examples/Abc/abc.par
else
UNIT_TEST_CMD=./unitTest$(EXEEXT) -param ../examples/Abc/abc.par
endif

all: test


test: unitTest$(EXEEXT)
	$(UNIT_TEST_CMD)

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = flugpl.log flugpl.mps
